<resources>
    <string name="app_name">Multiple Choice Quiz</string>
    <string name="welcome_back">Welcome back</string>
    <string name="start_quiz">Start Quiz</string>
    <string name="high_score">High score: </string>
    <string name="quiz">Quiz</string>
    <string name="score">Score: </string>
    <string name="question_count">Question: 1/</string>
    <string name="timer">0:30</string>
    <string name="question">Question</string>
    <string name="option_1">Option 1</string>
    <string name="option_2">Option 2</string>
    <string name="option_3">Option 3</string>
    <string name="option_4">Option 4</string>
    <string name="confirm">Confirm</string>
    <string name="your_answer_is_correct">Your answer is correct</string>
    <string name="difficulty">Difficulty:</string>
</resources>