<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".activities.QuizActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/act_quiz_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/quiz"
        app:titleTextColor="@color/colorOnPrimary" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/act_quiz_toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorBackground">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/act_quiz_score_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:fontFamily="@font/montserrat"
                android:freezesText="true"
                android:text="@string/score"
                android:textColor="@color/colorOnPrimary"
                android:textSize="15dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/act_quiz_category_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/montserrat"
                android:freezesText="true"
                android:text="Category: "
                android:textColor="@color/colorOnPrimary"
                android:textSize="15dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/act_quiz_difficulty_text" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/act_quiz_question_count_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/montserrat"
                android:freezesText="true"
                android:text="@string/question_count"
                android:textColor="@color/colorOnPrimary"
                android:textSize="15dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/act_quiz_score_text" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/act_quiz_difficulty_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/montserrat"
                android:freezesText="true"
                android:text="@string/difficulty"
                android:textColor="@color/colorOnPrimary"
                android:textSize="15dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/act_quiz_question_count_text" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/act_quiz_timer_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/montserrat_bold"
                android:freezesText="true"
                android:text="@string/timer"
                android:textColor="@color/colorOnPrimary"
                android:textSize="30dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/act_quiz_answer_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:fontFamily="@font/montserrat_bold"
                android:freezesText="true"
                android:text="@string/your_answer_is_correct"
                android:textColor="@color/colorOnPrimary"
                android:textSize="20dp"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/act_quiz_question_count_text" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/act_quiz_question_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/montserrat_bold"
                android:freezesText="true"
                android:text="@string/question"
                android:textColor="@color/colorOnPrimary"
                android:textSize="30dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/act_quiz_answer_text" />

            <RadioGroup
                android:id="@+id/act_main_question_radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="20dp"
                android:paddingHorizontal="20dp"
                app:layout_constraintBottom_toTopOf="@id/act_quiz_confirm_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/act_quiz_question_text">

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/act_main_option_one_radio_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/colorOnPrimary"
                    android:freezesText="true"
                    android:text="@string/option_1"
                    android:textColor="@color/colorOnPrimary" />

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/act_main_option_two_radio_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/colorOnPrimary"
                    android:freezesText="true"
                    android:text="@string/option_2"
                    android:textColor="@color/colorOnPrimary" />

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/act_main_option_three_radio_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/colorOnPrimary"
                    android:freezesText="true"
                    android:text="@string/option_3"
                    android:textColor="@color/colorOnPrimary" />

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/act_main_option_four_radio_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/colorOnPrimary"
                    android:freezesText="true"
                    android:text="@string/option_4"
                    android:textColor="@color/colorOnPrimary" />

            </RadioGroup>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/act_quiz_confirm_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@color/colorPrimary"
                android:freezesText="true"
                android:onClick="ConfirmQuestion"
                android:text="@string/confirm"
                android:textColor="@color/colorOnPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/act_main_question_radio_group" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>