<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".activities.MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/act_main_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/app_name"
        app:titleTextColor="@color/colorOnPrimary" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/act_main_welcome_dear_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/welcome_back"
        android:textAlignment="center"
        android:textColor="@color/colorOnPrimary"
        android:textSize="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/act_main_toolbar" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/act_main_categories_spinner"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:spinnerMode="dropdown"
        android:layout_marginHorizontal="30dp"
        android:background="@color/colorPrimary"
        style="@style/PopupTheme"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@id/act_main_welcome_dear_text" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/act_main_hgih_score_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/high_score"
        android:textAlignment="center"
        android:layout_marginHorizontal="20dp"
        android:textColor="@color/colorOnPrimary"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@id/act_main_start_quiz_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/act_main_start_quiz_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:background="@color/colorPrimary"
        android:onClick="StartQuiz"
        android:text="@string/start_quiz"
        android:textColor="@color/colorOnPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>